--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,12 +23,19 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  animated_text_kit: ^4.2.1
+  cached_network_image: ^3.0.0
+  crop_image: ^1.0.1
   cupertino_icons: ^1.0.2
+  flutter_staggered_grid_view: ^0.4.0
   fluttertoast: ^8.0.4
   google_fonts: ^2.0.0
   http: ^0.13.1
-  shared_preferences: ^2.0.5
+  image_cropper: ^1.4.0
+  image_picker: ^0.7.5+2
+  intl: ^0.17.0
   progress_dialog: ^1.0.1
+  shared_preferences: ^2.0.5
 
 dev_dependencies:
   flutter_test:
