--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,15 +27,22 @@ dependencies:
   cached_network_image: ^3.0.0
   crop_image: ^1.0.1
   cupertino_icons: ^1.0.2
+  date_format: ^2.0.2
+  flutter_datetime_picker: ^1.5.1
   flutter_staggered_grid_view: ^0.4.0
   fluttertoast: ^8.0.4
+  geocoding: ^2.0.0
+  geolocator: ^7.2.0+1
   google_fonts: ^2.0.0
+  google_maps_flutter: ^2.0.6
   http: ^0.13.1
   image_cropper: ^1.4.0
   image_picker: ^0.7.5+2
   intl: ^0.17.0
-  progress_dialog: ^1.0.1
+  ndialog: ^4.1.0
+  progress_dialog: ^1.2.4
   shared_preferences: ^2.0.5
+  webview_flutter: ^2.0.9
 
 dev_dependencies:
   flutter_test:
